# media-transcriber

./: .env.example  .gitignore  README.md  app.py  helper.py  main.py  pyproject.toml  pytest.ini  qa.py  requirements.txt
.squad/: .first-run  COMMIT_MSG.txt  decisions.md  routing.md  team.md
.squad/agents/dallas/: charter.md  history.md
.squad/agents/hudson/: charter.md  history.md
.squad/agents/ralph/: charter.md  history.md
.squad/agents/ripley/: charter.md  history.md
.squad/agents/scribe/: charter.md  history.md
.squad/casting/: history.json  policy.json  registry.json
.squad/identity/: now.md  wisdom.md
media_transcriber.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_app_qa_tab.py  test_check_file_exists.py  test_clean_up_temp_files.py  test_get_audio_channel.py  test_get_transcription_file.py  test_load_audio_segments.py  test_main.py  test_qa.py  test_transcribe_audio_segments.py  test_whisper_transcription.py  test_write_file.py  test_youtube_download.py
