[project]
name = "media-transcriber"
version = "0.1.0"
description = "Multi-backend video/audio transcription CLI — Azure Speech API and local Whisper, with YouTube support"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "pydub==0.25.1",
    "SpeechRecognition==3.14.2",
    "yt-dlp>=2024.1.0",
    "audioop-lts==0.2.1; python_version >= '3.13'",
]

[project.optional-dependencies]
whisper = [
    "faster-whisper>=1.0.0",
]
dev = [
    "pytest==8.3.5",
    "pytest-mock==3.14.0",
    "pytest-cov==6.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m not integration')",
    "slow: marks tests as slow",
]
addopts = "--tb=short"
